--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -1,6 +1,7 @@
 .cardContainer {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
     @media screen and (max-width: 480px){
         justify-content: center;
